# rust-template

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  release-please-config.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: go-lint.yml  go-release.yml  pre-commit.yml  release-please.yml
placeholder/: Cargo.toml  build.rs
