# TODO: @memes - update as needed
[workspace]
resolver = "2"
members = [
    "placeholder",
]

[workspace.package]
authors = [
    "Matthew Emes <memes@matthewemes.com>",
]
edition = "2021"
rust-version = "1.75"
repository = "github.com/memes/rust-template"
license = "Apache-2.0"

[profile.release]
strip = "symbols"
panic = "abort"
