# TODO: @memes - update
[package]
name = "placeholder"
version = "0.1.0"
description = "Placeholder application"
authors.workspace = true
editon.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "placeholder"
path = "src/main.rs"

[dependencies]

[build-dependencies]
